--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -2,7 +2,11 @@
 header.masthead {
   padding-top: 10rem;
   padding-bottom: calc(10rem - 56px);
-  background-image: url('../img/header.jpg');
+  background: #0575E6;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to bottom, #021B79, #0575E6);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to bottom, #021B79, #0575E6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+ // background-image: url('../img/header.jpg');
   background-position: center center;
   @include background-cover;
   hr {
