--- a/css/creative.css
+++ b/css/creative.css
@@ -155,9 +155,9 @@ header.masthead {
   padding-bottom: calc(10rem - 56px);
   background: #0575E6;
   /* fallback for old browsers */
-  background: -webkit-linear-gradient(to bottom, #021B79, #0575E6);
+  background: -webkit-linear-gradient(to bottom, #021B79, #2b32b2);
   /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to bottom, #021B79, #0575E6);
+  background: linear-gradient(to bottom, #021B79, #2b32b2);
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   background-position: center center;
   -webkit-background-size: cover;
@@ -185,6 +185,9 @@ header.masthead {
   @media (min-width: 1200px) {
     header.masthead h1 {
       font-size: 4rem; } }
+
+.bg-primary hr {
+  border-color: white; }
 
 .service-box {
   max-width: 400px; }
